Overflow bug fix

--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -18,10 +18,6 @@
     font-style: normal;
 }
 
-html{
-    overflow-x: hidden;
-}
-
 body{
     font-family: Neometric;
     background-color: #F4F6EA;
